# windows-clipboard-deformatter

./: CLAUDE.md  Cargo.toml  README.md  app.manifest
examples/: hook_test.rs
src/: accent.rs  app.rs  clipboard.rs  error.rs  hotkey.rs  main.rs  overlay.rs  startup.rs  tray.rs
