[package]
name = "clipboard-deformatter"
version = "0.1.0"
edition = "2021"
description = "Strip clipboard formatting with a hotkey"
license = "GPL-3.0-or-later"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
